# lambda-cute

./: lambda-cute.cabal  stack.yaml
app/: Main.hs
src/Language/: Lambda.hs
src/Language/Arith/: Syntax.hs
src/Language/Bool/: Syntax.hs
src/Language/Lambda/: Parser.hs  Syntax.hs
test/Language/Lambda/: ParserSpec.hs
